fix mobile spacing and stuff

--- a/src/styles/AboutMeSection.scss
+++ b/src/styles/AboutMeSection.scss
@@ -18,6 +18,10 @@
     gap: 10vmin;
     overflow-y: scroll;
     overflow-x: hidden;
+
+    &__body {
+      width: initial;
+    }
   }
 
   &__portrait {
