--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -7,6 +7,8 @@
 
   position: relative;
   color: colors.$green;
+  margin-top: 0;
+  padding-top: 1rem;
 
   &__hostline {
     position: relative;
@@ -73,7 +75,8 @@
 }
 
 .mobile .header {
-  margin: 0 1rem;
+  margin: 0;
+  padding: 0;
 }
 
 @keyframes flashing-cursor {
